feat(tenant): change role of tenant; list backup jobs
